# lightcsv

./: .flake8  LICENSE  Makefile  README.md  lightcsv.py  pyproject.toml  simplecsv.py
.github/workflows/: main.yml
tests/: test_lightcsv.py
