[tool.poetry]
name = "lightcsv"
version = "0.2.3"
description = "Simple pure Python CSV parser"
authors = ["Jose Rodriguez <boriel@gmail.com>"]
license = "MIT"
homepage = "https://github.com/boriel/lightcsv"
repository = "https://github.com/boriel/lightcsv"
keywords = ["csv", "CSV"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.mypy]
python_version = 3.8
files = ["*.py", "tests/**/*.py"]
